--- a/src/scss/components/entity_activity/timeline.scss
+++ b/src/scss/components/entity_activity/timeline.scss
@@ -9,7 +9,7 @@
       width: 1px;
       top: 50px;
       bottom: 15px;
-      background-color: #696e6f;
+      background-color: #dce3e6;
     }
 
     &:first-child .activity-item:first-child {
@@ -50,10 +50,14 @@
   }
 
   .activity-image-secondary {
-    top: 6px;
+    top: 4px;
     left: 0;
-    height: 20px;
-    width: 20px;
+    height: 24px;
+    width: 24px;
+
+    i {
+      font-size: 14px;
+    }
   }
 
   .activity-item-content-section {
