Implemented dropzone + cropperjs

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -37,6 +37,7 @@ html {
 @import '~material-design-iconic-font/dist/css/material-design-iconic-font.css';
 @import '~odometer/themes/odometer-theme-default.css';
 @import '~antiscroll/antiscroll.css';
+@import '~cropperjs/dist/cropper.css';
 
 @import './error';
 
