Removed "!important" from some elements and bump version 2.0.195

--- a/src/scss/components/drawer.scss
+++ b/src/scss/components/drawer.scss
@@ -3,7 +3,7 @@
   top: 0;
   bottom: 0;
   right: 0;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12) !important;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 1px 6px rgba(0, 0, 0, 0.12);
   background-color: #fff;
   border-radius: 12px 0 0 12px;
   -ms-transform: translatex(100%);
