--- a/src/scss/layout/admin/drawer.scss
+++ b/src/scss/layout/admin/drawer.scss
@@ -360,7 +360,7 @@
     }
 
     &:focus {
-      box-shadow: 0 2px 5px 0 rgba(12, 13, 13, 0.16), 0 1px 6px rgba(12, 13, 13, 0.16) !important;
+      box-shadow: 0 2px 5px 0 rgba(12, 13, 13, 0.16), 0 1px 6px rgba(12, 13, 13, 0.16);
     }
   }
 
