Updated Ledger font and bump version 2.0.197
Also renamed some icons

--- a/src/scss/components/form/task_check_box.scss
+++ b/src/scss/components/form/task_check_box.scss
@@ -27,7 +27,7 @@
     }
 
     &:not(.is-completed) .task-check-box-activity-icon > i::before {
-      content: '\e90b'; // ledger-icon-circle-o
+      content: '\e90b'; // ledger-icon-circle-outline
     }
 
     .task-check-box-activity-icon {
