--- a/src/scss/fonts/ledger.scss
+++ b/src/scss/fonts/ledger.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Ledger';
   src:
-    url('../../fonts/Ledger.ttf?bbzhyd') format('truetype'),
-    url('../../fonts/Ledger.woff?bbzhyd') format('woff'),
-    url('../../fonts/Ledger.svg?bbzhyd#Ledger') format('svg');
+    url('../../fonts/Ledger.ttf?axx3nf') format('truetype'),
+    url('../../fonts/Ledger.woff?axx3nf') format('woff'),
+    url('../../fonts/Ledger.svg?axx3nf#Ledger') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -39,56 +39,14 @@
   font-size: 5em;
 }
 
-.ledger-icon-activity:before {
-  content: "\e90c";
-}
-.ledger-icon-alert-circle:before {
-  content: "\e907";
-}
 .ledger-icon-arrow-back:before {
   content: "\e90d";
-}
-.ledger-icon-arrow-collapse-left:before {
-  content: "\e90e";
-}
-.ledger-icon-arrow-expand-down:before {
-  content: "\e90f";
-}
-.ledger-icon-arrow-expand-right:before {
-  content: "\e910";
 }
 .ledger-icon-arrow-left:before {
   content: "\f2ff";
 }
 .ledger-icon-arrow-right:before {
   content: "\f301";
-}
-.ledger-icon-arrow-up-down:before {
-  content: "\e913";
-}
-.ledger-icon-assigments:before {
-  content: "\e915";
-}
-.ledger-icon-attach:before {
-  content: "\e901";
-}
-.ledger-icon-attach-messages:before {
-  content: "\e917";
-}
-.ledger-icon-bell:before {
-  content: "\e919";
-}
-.ledger-icon-bookmark:before {
-  content: "\f11e";
-}
-.ledger-icon-bookmark-outline:before {
-  content: "\f11d";
-}
-.ledger-icon-business:before {
-  content: "\e91b";
-}
-.ledger-icon-buzz:before {
-  content: "\e91c";
 }
 .ledger-icon-camera:before {
   content: "\f28c";
@@ -98,12 +56,6 @@
 }
 .ledger-icon-carat-up:before {
   content: "\f2f8";
-}
-.ledger-icon-card:before {
-  content: "\f129";
-}
-.ledger-icon-chat:before {
-  content: "\e91d";
 }
 .ledger-icon-check:before {
   content: "\f26b";
@@ -132,47 +84,17 @@
 .ledger-icon-circle-outline:before {
   content: "\e90b";
 }
-.ledger-icon-clock:before {
-  content: "\e921";
-}
 .ledger-icon-close:before {
   content: "\e922";
 }
 .ledger-icon-close-circle:before {
   content: "\e920";
 }
-.ledger-icon-columns-reset:before {
-  content: "\f235";
-}
-.ledger-icon-comment:before {
-  content: "\e903";
-}
-.ledger-icon-connect:before {
-  content: "\e923";
-}
-.ledger-icon-conversion-reset:before {
-  content: "\e924";
-}
-.ledger-icon-copy:before {
-  content: "\e925";
-}
-.ledger-icon-customers:before {
-  content: "\e926";
-}
-.ledger-icon-dashboard:before {
-  content: "\e927";
-}
-.ledger-icon-date-big:before {
-  content: "\e928";
-}
 .ledger-icon-delete:before {
   content: "\e968";
 }
 .ledger-icon-dot-circle:before {
   content: "\e91a";
-}
-.ledger-icon-dot-circle-alt:before {
-  content: "\f26e";
 }
 .ledger-icon-download:before {
   content: "\e92c";
@@ -183,89 +105,20 @@
 .ledger-icon-edit:before {
   content: "\e947";
 }
-.ledger-icon-emoji:before {
-  content: "\e92d";
-}
-.ledger-icon-events:before {
-  content: "\e92e";
-}
-.ledger-icon-extension:before {
-  content: "\e91e";
-}
 .ledger-icon-eye:before {
   content: "\e930";
 }
 .ledger-icon-eye-off:before {
   content: "\e92f";
 }
-.ledger-icon-facebook:before {
-  content: "\f343";
-}
-.ledger-icon-facebook-box:before {
-  content: "\f342";
-}
-.ledger-icon-file:before {
-  content: "\e931";
-}
 .ledger-icon-filter:before {
   content: "\e932";
-}
-.ledger-icon-filter-target:before {
-  content: "\f382";
-}
-.ledger-icon-flag:before {
-  content: "\e91f";
-}
-.ledger-icon-flash:before {
-  content: "\e904";
-}
-.ledger-icon-flash-off:before {
-  content: "\e905";
-}
-.ledger-icon-forms-sales:before {
-  content: "\e933";
-}
-.ledger-icon-forms-service:before {
-  content: "\e934";
-}
-.ledger-icon-full-page:before {
-  content: "\e935";
-}
-.ledger-icon-globe:before {
-  content: "\e92a";
-}
-.ledger-icon-goal:before {
-  content: "\e936";
 }
 .ledger-icon-help:before {
   content: "\f1f6";
 }
 .ledger-icon-info:before {
   content: "\f1f8";
-}
-.ledger-icon-items:before {
-  content: "\e939";
-}
-.ledger-icon-leaderboard:before {
-  content: "\e93a";
-}
-.ledger-icon-leads:before {
-  content: "\e93b";
-}
-.ledger-icon-level-access:before {
-  content: "\e93c";
-}
-.ledger-icon-link:before {
-  content: "\f18e";
-}
-.ledger-icon-linkedin:before {
-  content: "\f3f8";
-}
-.ledger-icon-linkedin-box:before {
-  content: "\f356";
-}
-.ledger-icon-local-florist:before {
-  content: "\e92b";
 }
 .ledger-icon-lock:before {
   content: "\e93f";
@@ -276,38 +129,11 @@
 .ledger-icon-logout:before {
   content: "\e940";
 }
-.ledger-icon-mention:before {
-  content: "\e902";
-}
 .ledger-icon-menu:before {
   content: "\e941";
 }
 .ledger-icon-messages:before {
   content: "\e942";
-}
-.ledger-icon-minus:before {
-  content: "\f273";
-}
-.ledger-icon-minus-circle:before {
-  content: "\e943";
-}
-.ledger-icon-minus-circle-outline:before {
-  content: "\e944";
-}
-.ledger-icon-minus-square:before {
-  content: "\f272";
-}
-.ledger-icon-money-coin:before {
-  content: "\e945";
-}
-.ledger-icon-money-pile:before {
-  content: "\e946";
-}
-.ledger-icon-mood:before {
-  content: "\e948";
-}
-.ledger-icon-mood-bad:before {
-  content: "\e949";
 }
 .ledger-icon-more:before {
   content: "\f19c";
@@ -315,92 +141,11 @@
 .ledger-icon-more-vert:before {
   content: "\f19b";
 }
-.ledger-icon-opportunity:before {
-  content: "\e94a";
-}
-.ledger-icon-people:before {
-  content: "\e94b";
-}
-.ledger-icon-percentage:before {
-  content: "\e94c";
-}
-.ledger-icon-person:before {
-  content: "\e94d";
-}
-.ledger-icon-phone:before {
-  content: "\e94e";
-}
-.ledger-icon-pin:before {
-  content: "\f08d";
-}
-.ledger-icon-play:before {
-  content: "\f3aa";
-}
-.ledger-icon-play-circle:before {
-  content: "\f2f6";
-}
-.ledger-icon-plus:before {
-  content: "\f278";
-}
-.ledger-icon-plus-circle:before {
-  content: "\e94f";
-}
-.ledger-icon-plus-circle-outline:before {
-  content: "\e950";
-}
-.ledger-icon-plus-square:before {
-  content: "\f277";
-}
-.ledger-icon-print:before {
-  content: "\e951";
-}
-.ledger-icon-projects:before {
-  content: "\e952";
-}
-.ledger-icon-refresh:before {
-  content: "\f1b9";
-}
 .ledger-icon-reload:before {
   content: "\e90a";
 }
-.ledger-icon-reply:before {
-  content: "\e953";
-}
-.ledger-icon-reports:before {
-  content: "\e954";
-}
-.ledger-icon-request:before {
-  content: "\e955";
-}
-.ledger-icon-reset-photo:before {
-  content: "\f372";
-}
-.ledger-icon-restaurant:before {
-  content: "\e956";
-}
-.ledger-icon-search:before {
-  content: "\e957";
-}
-.ledger-icon-sent:before {
-  content: "\e958";
-}
-.ledger-icon-service:before {
-  content: "\e959";
-}
-.ledger-icon-services:before {
-  content: "\e95a";
-}
 .ledger-icon-settings:before {
   content: "\e95b";
-}
-.ledger-icon-shield-check:before {
-  content: "\f1c7";
-}
-.ledger-icon-shield-security:before {
-  content: "\f1c8";
-}
-.ledger-icon-smartphone:before {
-  content: "\f2d4";
 }
 .ledger-icon-sort-asc:before {
   content: "\f1cd";
@@ -411,77 +156,11 @@
 .ledger-icon-square-outline:before {
   content: "\f279";
 }
-.ledger-icon-stage:before {
-  content: "\e95c";
-}
 .ledger-icon-star:before {
   content: "\e929";
 }
-.ledger-icon-star-circle:before {
-  content: "\e937";
-}
-.ledger-icon-star-half:before {
-  content: "\e938";
-}
 .ledger-icon-star-outline:before {
   content: "\e95d";
-}
-.ledger-icon-status:before {
-  content: "\f1e2";
-}
-.ledger-icon-stop:before {
-  content: "\f3b6";
-}
-.ledger-icon-streams:before {
-  content: "\e973";
-}
-.ledger-icon-tag:before {
-  content: "\e962";
-}
-.ledger-icon-tag-call:before {
-  content: "\f2be";
-}
-.ledger-icon-tag-closed:before {
-  content: "\f084";
-}
-.ledger-icon-tag-comment:before {
-  content: "\e93d";
-}
-.ledger-icon-tag-email:before {
-  content: "\f15a";
-}
-.ledger-icon-tag-file:before {
-  content: "\f223";
-}
-.ledger-icon-tag-rating:before {
-  content: "\f27d";
-}
-.ledger-icon-tag-reopened:before {
-  content: "\f052";
-}
-.ledger-icon-talk:before {
-  content: "\e96a";
-}
-.ledger-icon-tax:before {
-  content: "\e96b";
-}
-.ledger-icon-text-tool:before {
-  content: "\e908";
-}
-.ledger-icon-tickets:before {
-  content: "\e96c";
-}
-.ledger-icon-transactions:before {
-  content: "\e96d";
-}
-.ledger-icon-twitter:before {
-  content: "\f360";
-}
-.ledger-icon-twitter-box:before {
-  content: "\f35f";
-}
-.ledger-icon-unread:before {
-  content: "\e96e";
 }
 .ledger-icon-view-cards:before {
   content: "\e971";
@@ -491,13 +170,4 @@
 }
 .ledger-icon-view-list:before {
   content: "\e972";
-}
-.ledger-icon-view-rows:before {
-  content: "\e900";
-}
-.ledger-icon-view-timeline:before {
-  content: "\e975";
-}
-.ledger-icon-wrap-text:before {
-  content: "\f259";
 }
