Updated types-property-layout add button functionality and bump version 2.0.205

--- a/src/scss/components/form/typed_property.scss
+++ b/src/scss/components/form/typed_property.scss
@@ -67,7 +67,9 @@
 .typed-property-layout {
   position: relative;
 
-  &:hover .typed-property-add {
+  &:hover .typed-property-add,
+  &:focus .typed-property-add,
+  &:focus-within .typed-property-add {
     display: block;
   }
 }
