Fixed showing calendar when view single calendar under mobile and bump version 2.0.215

--- a/src/scss/components/form/range_select.scss
+++ b/src/scss/components/form/range_select.scss
@@ -324,8 +324,12 @@
   }
 }
 
-.single {
-  .range-select .range-select-content > div > .calendar {
-    border: none;
+.single .range-select .range-select-content .filter-calendar .calendar {
+  border: none;
+}
+
+@media (max-width: 991.98px) {
+  .show-calendar.single .range-select .range-select-content .filter-calendar .calendar {
+    display: block;
   }
 }
