Hide reset button when dropdown is disabled and bump version 2.0.221

--- a/src/scss/components/form/dropdown.scss
+++ b/src/scss/components/form/dropdown.scss
@@ -140,6 +140,7 @@
       cursor: default;
     }
 
+    .dropdown-reset,
     .dropdown-indicator,
     .dropdown-selected-icon {
       display: none;
